The endpoint now rquires the body album to include an ID to indentify the associated tag in the response
